# medical-report-generation

./: .gitignore  evaluate.py  main.py  pyproject.toml
medical_report_generation/: config.json  datasets.py  model.py  trainer.py  utils.py
