[project]
name = "medical-report-generation"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "transformers~=4.0",
    "torch~=2.0",
    "torchvision",
    "safetensors",
    "pillow",
]

[tool.black]
line-length = 100

[tool.setuptools]
packages = ["medical_report_generation"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"
